15-Helm/SonarQube _with_Jenkins/chart_deploy_sonarqube/templates/sonarqube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
  namespace: sonarqube
spec:
  rules:
  - host: sonar.local.com
    http:
       paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: sonarqube
              port: 
                number: 30007
